[package]
name = "cboe_option_data"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
regex = "1.11.1"
log = "0.4.27"
env_logger = "0.11.8"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4.41" }
chrono-tz = "0.8"
anyhow = "1.0.98"
csv = "1.3"
dotenv = "0.15"


[dev-dependencies]
sqlx-cli = { version = "0.8.5", features = ["postgres"] }
